--- a/Project/Template.uvprojx
+++ b/Project/Template.uvprojx
@@ -337,7 +337,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F10X_HD, USE_STDPERIPH_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>..\Libraries\STM32F10x_StdPeriph_Driver\inc;..\User;..\User\HARDWARE\inc;..\User\SYSTEM\segger_rtt;..\User\NET\device;..\User\NET\MQTT;..\User\NET\onenet;..\User\SYSTEM\delay;..\User\SYSTEM\sys;..\User\SYSTEM\usart</IncludePath>
+              <IncludePath>..\Libraries\STM32F10x_StdPeriph_Driver\inc;..\User;..\User\HARDWARE\inc;..\User\SYSTEM\segger_rtt;..\User\NET\device;..\User\NET\MQTT;..\User\NET\onenet;..\User\SYSTEM\delay;..\User\SYSTEM\sys;..\User\SYSTEM\usart;..\User\HARDWARE\mpu6050\eMPL;..\User\HARDWARE\mpu6050</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -560,6 +560,46 @@
               <FileName>adc.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\HARDWARE\src\adc.c</FilePath>
+            </File>
+            <File>
+              <FileName>oled.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\HARDWARE\src\oled.c</FilePath>
+            </File>
+            <File>
+              <FileName>beep.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\HARDWARE\src\beep.c</FilePath>
+            </File>
+            <File>
+              <FileName>led.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\HARDWARE\src\led.c</FilePath>
+            </File>
+            <File>
+              <FileName>mpu6050.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\HARDWARE\mpu6050\mpu6050.c</FilePath>
+            </File>
+            <File>
+              <FileName>mpuiic.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\HARDWARE\mpu6050\mpuiic.c</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu_dmp_motion_driver.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\HARDWARE\mpu6050\eMPL\inv_mpu_dmp_motion_driver.c</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\HARDWARE\mpu6050\eMPL\inv_mpu.c</FilePath>
+            </File>
+            <File>
+              <FileName>timer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\HARDWARE\src\timer.c</FilePath>
             </File>
           </Files>
         </Group>
